Initial item list added.